@@ -69,7 +69,10 @@
           'logic_compare', 'logic_operation', 'logic_negate', //'logic_boolean',
           //variable
           'variables_get','variables_set', 'variables_declare',
-          //'procedures_defnoreturn', 'procedures_defreturn', 'procedures_callnoreturn', 'procedures_callreturn',
+          //procedure
+          'procedures_defnoreturn', 'procedures_defreturn', 'procedures_callnoreturn', 'procedures_callreturn',
+          'procedures_return', 'procedures_null',
+          //custom
           //'custom_read','custom_write',
           ];
       for (var x = 0; x < keepers.length; x++) {
