@@ -77,3 +77,42 @@ Blockly.Arduino.procedures_callnoreturn = function() {
   var code = funcName + '(' + args.join(', ') + ');\n';
   return code;
 };
+
+Blockly.Language.procedures_return = {
+  // return value
+  category: null,
+  helpUrl: Blockly.LANG_PROCEDURES_DEFNORETURN_HELPURL,
+  init: function() {
+    this.setColour(290);
+    this.appendValueInput("VALUE", Number)
+      .appendTitle(Blockly.LANG_PROCEDURES_DEFRETURN_RETURN);
+    this.setInputsInline(true);
+    this.setPreviousStatement(true, null);
+    this.setNextStatement(true, null);
+    this.setTooltip("return in procedure");
+  }
+};
+
+Blockly.Arduino.procedures_return = function() {
+  var value = Blockly.Arduino.valueToCode(this, 'VALUE', Blockly.Arduino.ORDER_ATOMIC);
+  var code = "return "+value+";\n";
+  return code;
+};
+
+Blockly.Language.procedures_null = {
+  category: null,
+  helpUrl: null,
+  init: function() {
+    this.setColour(290);
+    this.appendDummyInput()
+        .appendTitle('Null');
+    this.setOutput(true,null);
+    this.setTooltip('Return null');
+  }
+};
+
+Blockly.Arduino.procedures_null = function() {
+  var code = 'NULL';
+  return [code ,Blockly.Arduino.ORDER_NONE];
+};
+
